<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_places"
        android:title="@string/nav_places"
        android:icon="@drawable/nav_places"/>
    <item
        android:id="@+id/nav_search"
        android:title="@string/nav_search"
        android:icon="@drawable/nav_search"/>
    <item
        android:id="@+id/nav_favorite"
        android:title="@string/nav_favorite"
        android:icon="@drawable/nav_favorite"/>
    <item
        android:id="@+id/nav_create"
        android:title="@string/nav_create"
        android:icon="@drawable/nav_create"/>
    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_settings"
        android:icon="@drawable/nav_settings"/>

</menu>